--- a/scss/bootstrap/scss/_badge.scss
+++ b/scss/bootstrap/scss/_badge.scss
@@ -5,15 +5,15 @@
 
 .badge {
   display: inline-block;
-  padding: $badge-padding-y $badge-padding-x;
-  @include font-size($badge-font-size);
-  font-weight: $badge-font-weight;
+  padding: $0badge-padding-y $0badge-padding-x;
+  @include font-size($0badge-font-size);
+  font-weight: $0badge-font-weight;
   line-height: 1;
-  color: $badge-color;
+  color: $0badge-color;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  @include border-radius($badge-border-radius);
+  @include border-radius($0badge-border-radius);
   @include gradient-bg();
 
   // Empty badges collapse automatically
