--- a/scss/bootstrap/scss/_grid.scss
+++ b/scss/bootstrap/scss/_grid.scss
@@ -2,7 +2,7 @@
 //
 // Rows contain your columns.
 
-@if $enable-grid-classes {
+@if $0enable-grid-classes {
   .row {
     @include make-row();
 
@@ -17,6 +17,6 @@
 //
 // Common styles for small and large grid columns
 
-@if $enable-grid-classes {
+@if $0enable-grid-classes {
   @include make-grid-columns();
 }
