--- a/scss/bootstrap/scss/_navbar.scss
+++ b/scss/bootstrap/scss/_navbar.scss
@@ -20,10 +20,10 @@
   flex-wrap: wrap; // allow us to do the line break for collapsing content
   align-items: center;
   justify-content: space-between; // space out brand from logo
-  padding-top: $navbar-padding-y;
-  padding-right: $navbar-padding-x; // default: null
-  padding-bottom: $navbar-padding-y;
-  padding-left: $navbar-padding-x; // default: null
+  padding-top: $0navbar-padding-y;
+  padding-right: $0navbar-padding-x; // default: null
+  padding-bottom: $0navbar-padding-y;
+  padding-left: $0navbar-padding-x; // default: null
   @include gradient-bg();
 
   // Because flex properties aren't inherited, we need to redeclare these first
@@ -41,8 +41,8 @@
     @extend %container-flex-properties;
   }
 
-  @each $breakpoint, $container-max-width in $container-max-widths {
-    > .container#{breakpoint-infix($breakpoint, $container-max-widths)} {
+  @each $0breakpoint, $0container-max-width in $0container-max-widths {
+    > .container#{breakpoint-infix($0breakpoint, $0container-max-widths)} {
       @extend %container-flex-properties;
     }
   }
@@ -54,16 +54,16 @@
 // Used for brand, project, or site names.
 
 .navbar-brand {
-  padding-top: $navbar-brand-padding-y;
-  padding-bottom: $navbar-brand-padding-y;
-  margin-right: $navbar-brand-margin-end;
-  @include font-size($navbar-brand-font-size);
-  text-decoration: if($link-decoration == none, null, none);
+  padding-top: $0navbar-brand-padding-y;
+  padding-bottom: $0navbar-brand-padding-y;
+  margin-right: $0navbar-brand-margin-end;
+  @include font-size($0navbar-brand-font-size);
+  text-decoration: if($0link-decoration == none, null, none);
   white-space: nowrap;
 
   &:hover,
   &:focus {
-    text-decoration: if($link-hover-decoration == underline, none, null);
+    text-decoration: if($0link-hover-decoration == underline, none, null);
   }
 }
 
@@ -95,8 +95,8 @@
 //
 
 .navbar-text {
-  padding-top: $nav-link-padding-y;
-  padding-bottom: $nav-link-padding-y;
+  padding-top: $0nav-link-padding-y;
+  padding-bottom: $0nav-link-padding-y;
 }
 
 
@@ -118,13 +118,13 @@
 
 // Button for toggling the navbar when in its collapsed state
 .navbar-toggler {
-  padding: $navbar-toggler-padding-y $navbar-toggler-padding-x;
-  @include font-size($navbar-toggler-font-size);
+  padding: $0navbar-toggler-padding-y $0navbar-toggler-padding-x;
+  @include font-size($0navbar-toggler-font-size);
   line-height: 1;
   background-color: transparent; // remove default button style
-  border: $border-width solid transparent; // remove default button style
-  @include border-radius($navbar-toggler-border-radius);
-  @include transition($navbar-toggler-transition);
+  border: $0border-width solid transparent; // remove default button style
+  @include border-radius($0navbar-toggler-border-radius);
+  @include transition($0navbar-toggler-transition);
 
   &:hover {
     text-decoration: none;
@@ -133,7 +133,7 @@
   &:focus {
     text-decoration: none;
     outline: 0;
-    box-shadow: 0 0 0 $navbar-toggler-focus-width;
+    box-shadow: 0 0 0 $0navbar-toggler-focus-width;
   }
 }
 
@@ -150,7 +150,7 @@
 }
 
 .navbar-nav-scroll {
-  max-height: var(--#{$variable-prefix}scroll-height, 75vh);
+  max-height: var(--#{$0variable-prefix}scroll-height, 75vh);
   overflow-y: auto;
 }
 
@@ -158,13 +158,13 @@
 // Generate series of `.navbar-expand-*` responsive classes for configuring
 // where your navbar collapses.
 .navbar-expand {
-  @each $breakpoint in map-keys($grid-breakpoints) {
-    $next: breakpoint-next($breakpoint, $grid-breakpoints);
-    $infix: breakpoint-infix($next, $grid-breakpoints);
+  @each $0breakpoint in map-keys($0grid-breakpoints) {
+    $0next: breakpoint-next($0breakpoint, $0grid-breakpoints);
+    $0infix: breakpoint-infix($0next, $0grid-breakpoints);
 
     // stylelint-disable-next-line scss/selector-no-union-class-name
-    &#{$infix} {
-      @include media-breakpoint-up($next) {
+    &#{$0infix} {
+      @include media-breakpoint-up($0next) {
         flex-wrap: nowrap;
         justify-content: flex-start;
 
@@ -176,8 +176,8 @@
           }
 
           .nav-link {
-            padding-right: $navbar-nav-link-padding-x;
-            padding-left: $navbar-nav-link-padding-x;
+            padding-right: $0navbar-nav-link-padding-x;
+            padding-left: $0navbar-nav-link-padding-x;
           }
         }
 
@@ -207,50 +207,50 @@
 // Dark links against a light background
 .navbar-light {
   .navbar-brand {
-    color: $navbar-light-brand-color;
+    color: $0navbar-light-brand-color;
 
     &:hover,
     &:focus {
-      color: $navbar-light-brand-hover-color;
+      color: $0navbar-light-brand-hover-color;
     }
   }
 
   .navbar-nav {
     .nav-link {
-      color: $navbar-light-color;
+      color: $0navbar-light-color;
 
       &:hover,
       &:focus {
-        color: $navbar-light-hover-color;
+        color: $0navbar-light-hover-color;
       }
 
       &.disabled {
-        color: $navbar-light-disabled-color;
+        color: $0navbar-light-disabled-color;
       }
     }
 
     .show > .nav-link,
     .nav-link.active {
-      color: $navbar-light-active-color;
+      color: $0navbar-light-active-color;
     }
   }
 
   .navbar-toggler {
-    color: $navbar-light-color;
-    border-color: $navbar-light-toggler-border-color;
+    color: $0navbar-light-color;
+    border-color: $0navbar-light-toggler-border-color;
   }
 
   .navbar-toggler-icon {
-    background-image: escape-svg($navbar-light-toggler-icon-bg);
+    background-image: escape-svg($0navbar-light-toggler-icon-bg);
   }
 
   .navbar-text {
-    color: $navbar-light-color;
+    color: $0navbar-light-color;
 
     a,
     a:hover,
     a:focus  {
-      color: $navbar-light-active-color;
+      color: $0navbar-light-active-color;
     }
   }
 }
@@ -258,49 +258,49 @@
 // White links against a dark background
 .navbar-dark {
   .navbar-brand {
-    color: $navbar-dark-brand-color;
+    color: $0navbar-dark-brand-color;
 
     &:hover,
     &:focus {
-      color: $navbar-dark-brand-hover-color;
+      color: $0navbar-dark-brand-hover-color;
     }
   }
 
   .navbar-nav {
     .nav-link {
-      color: $navbar-dark-color;
+      color: $0navbar-dark-color;
 
       &:hover,
       &:focus {
-        color: $navbar-dark-hover-color;
+        color: $0navbar-dark-hover-color;
       }
 
       &.disabled {
-        color: $navbar-dark-disabled-color;
+        color: $0navbar-dark-disabled-color;
       }
     }
 
     .show > .nav-link,
     .nav-link.active {
-      color: $navbar-dark-active-color;
+      color: $0navbar-dark-active-color;
     }
   }
 
   .navbar-toggler {
-    color: $navbar-dark-color;
-    border-color: $navbar-dark-toggler-border-color;
+    color: $0navbar-dark-color;
+    border-color: $0navbar-dark-toggler-border-color;
   }
 
   .navbar-toggler-icon {
-    background-image: escape-svg($navbar-dark-toggler-icon-bg);
+    background-image: escape-svg($0navbar-dark-toggler-icon-bg);
   }
 
   .navbar-text {
-    color: $navbar-dark-color;
+    color: $0navbar-dark-color;
     a,
     a:hover,
     a:focus {
-      color: $navbar-dark-active-color;
+      color: $0navbar-dark-active-color;
     }
   }
 }
