--- a/scss/bootstrap/scss/mixins/_gradients.scss
+++ b/scss/bootstrap/scss/mixins/_gradients.scss
@@ -1,11 +1,11 @@
 // Gradients
 
 // scss-docs-start gradient-bg-mixin
-@mixin gradient-bg($color: null) {
-  background-color: $color;
+@mixin gradient-bg($0color: null) {
+  background-color: $0color;
 
-  @if $enable-gradients {
-    background-image: var(--#{$variable-prefix}gradient);
+  @if $0enable-gradients {
+    background-image: var(--#{$0variable-prefix}gradient);
   }
 }
 // scss-docs-end gradient-bg-mixin
@@ -14,34 +14,34 @@
 // Horizontal gradient, from left to right
 //
 // Creates two color stops, start and end, by specifying a color and position for each color stop.
-@mixin gradient-x($start-color: $gray-700, $end-color: $gray-800, $start-percent: 0%, $end-percent: 100%) {
-  background-image: linear-gradient(to right, $start-color $start-percent, $end-color $end-percent);
+@mixin gradient-x($0start-color: $0gray-700, $0end-color: $0gray-800, $0start-percent: 0%, $0end-percent: 100%) {
+  background-image: linear-gradient(to right, $0start-color $0start-percent, $0end-color $0end-percent);
 }
 
 // Vertical gradient, from top to bottom
 //
 // Creates two color stops, start and end, by specifying a color and position for each color stop.
-@mixin gradient-y($start-color: $gray-700, $end-color: $gray-800, $start-percent: null, $end-percent: null) {
-  background-image: linear-gradient(to bottom, $start-color $start-percent, $end-color $end-percent);
+@mixin gradient-y($0start-color: $0gray-700, $0end-color: $0gray-800, $0start-percent: null, $0end-percent: null) {
+  background-image: linear-gradient(to bottom, $0start-color $0start-percent, $0end-color $0end-percent);
 }
 
-@mixin gradient-directional($start-color: $gray-700, $end-color: $gray-800, $deg: 45deg) {
-  background-image: linear-gradient($deg, $start-color, $end-color);
+@mixin gradient-directional($0start-color: $0gray-700, $0end-color: $0gray-800, $0deg: 45deg) {
+  background-image: linear-gradient($0deg, $0start-color, $0end-color);
 }
 
-@mixin gradient-x-three-colors($start-color: $blue, $mid-color: $purple, $color-stop: 50%, $end-color: $red) {
-  background-image: linear-gradient(to right, $start-color, $mid-color $color-stop, $end-color);
+@mixin gradient-x-three-colors($0start-color: $0blue, $0mid-color: $0purple, $0color-stop: 50%, $0end-color: $0red) {
+  background-image: linear-gradient(to right, $0start-color, $0mid-color $0color-stop, $0end-color);
 }
 
-@mixin gradient-y-three-colors($start-color: $blue, $mid-color: $purple, $color-stop: 50%, $end-color: $red) {
-  background-image: linear-gradient($start-color, $mid-color $color-stop, $end-color);
+@mixin gradient-y-three-colors($0start-color: $0blue, $0mid-color: $0purple, $0color-stop: 50%, $0end-color: $0red) {
+  background-image: linear-gradient($0start-color, $0mid-color $0color-stop, $0end-color);
 }
 
-@mixin gradient-radial($inner-color: $gray-700, $outer-color: $gray-800) {
-  background-image: radial-gradient(circle, $inner-color, $outer-color);
+@mixin gradient-radial($0inner-color: $0gray-700, $0outer-color: $0gray-800) {
+  background-image: radial-gradient(circle, $0inner-color, $0outer-color);
 }
 
-@mixin gradient-striped($color: rgba($white, .15), $angle: 45deg) {
-  background-image: linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
+@mixin gradient-striped($0color: rgba($0white, .15), $0angle: 45deg) {
+  background-image: linear-gradient($0angle, $0color 25%, transparent 25%, transparent 50%, $0color 50%, $0color 75%, transparent 75%, transparent);
 }
 // scss-docs-end gradient-mixins
