--- a/scss/bootstrap/scss/_alert.scss
+++ b/scss/bootstrap/scss/_alert.scss
@@ -4,21 +4,21 @@
 
 .alert {
   position: relative;
-  padding: $alert-padding-y $alert-padding-x;
-  margin-bottom: $alert-margin-bottom;
-  border: $alert-border-width solid transparent;
-  @include border-radius($alert-border-radius);
+  padding: $0alert-padding-y $0alert-padding-x;
+  margin-bottom: $0alert-margin-bottom;
+  border: $0alert-border-width solid transparent;
+  @include border-radius($0alert-border-radius);
 }
 
 // Headings for larger alerts
 .alert-heading {
-  // Specified to prevent conflicts of changing $headings-color
+  // Specified to prevent conflicts of changing $0headings-color
   color: inherit;
 }
 
 // Provide class for links that match alerts
 .alert-link {
-  font-weight: $alert-link-font-weight;
+  font-weight: $0alert-link-font-weight;
 }
 
 
@@ -27,15 +27,15 @@
 // Expand the right padding and account for the close button's positioning.
 
 .alert-dismissible {
-  padding-right: $alert-dismissible-padding-r;
+  padding-right: $0alert-dismissible-padding-r;
 
   // Adjust close link position
   .btn-close {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: $stretched-link-z-index + 1;
-    padding: $alert-padding-y * 1.25 $alert-padding-x;
+    z-index: $0stretched-link-z-index + 1;
+    padding: $0alert-padding-y * 1.25 $0alert-padding-x;
   }
 }
 
@@ -43,15 +43,15 @@
 // scss-docs-start alert-modifiers
 // Generate contextual modifier classes for colorizing the alert.
 
-@each $state, $value in $theme-colors {
-  $alert-background: shift-color($value, $alert-bg-scale);
-  $alert-border: shift-color($value, $alert-border-scale);
-  $alert-color: shift-color($value, $alert-color-scale);
-  @if (contrast-ratio($alert-background, $alert-color) < $min-contrast-ratio) {
-    $alert-color: mix($value, color-contrast($alert-background), abs($alert-color-scale));
+@each $0state, $0value in $0theme-colors {
+  $0alert-background: shift-color($0value, $0alert-bg-scale);
+  $0alert-border: shift-color($0value, $0alert-border-scale);
+  $0alert-color: shift-color($0value, $0alert-color-scale);
+  @if (contrast-ratio($0alert-background, $0alert-color) < $0min-contrast-ratio) {
+    $0alert-color: mix($0value, color-contrast($0alert-background), abs($0alert-color-scale));
   }
-  .alert-#{$state} {
-    @include alert-variant($alert-background, $alert-border, $alert-color);
+  .alert-#{$0state} {
+    @include alert-variant($0alert-background, $0alert-border, $0alert-color);
   }
 }
 // scss-docs-end alert-modifiers
