--- a/scss/bootstrap/scss/_carousel.scss
+++ b/scss/bootstrap/scss/_carousel.scss
@@ -33,7 +33,7 @@
   width: 100%;
   margin-right: -100%;
   backface-visibility: hidden;
-  @include transition($carousel-transition);
+  @include transition($0carousel-transition);
 }
 
 .carousel-item.active,
@@ -78,7 +78,7 @@
   .active.carousel-item-end {
     z-index: 0;
     opacity: 0;
-    @include transition(opacity 0s $carousel-transition-duration);
+    @include transition(opacity 0s $0carousel-transition-duration);
   }
 }
 
@@ -97,39 +97,39 @@
   display: flex; // 1. allow flex styles
   align-items: center; // 2. vertically center contents
   justify-content: center; // 3. horizontally center contents
-  width: $carousel-control-width;
+  width: $0carousel-control-width;
   padding: 0;
-  color: $carousel-control-color;
+  color: $0carousel-control-color;
   text-align: center;
   background: none;
   border: 0;
-  opacity: $carousel-control-opacity;
-  @include transition($carousel-control-transition);
+  opacity: $0carousel-control-opacity;
+  @include transition($0carousel-control-transition);
 
   // Hover/focus state
   &:hover,
   &:focus {
-    color: $carousel-control-color;
+    color: $0carousel-control-color;
     text-decoration: none;
     outline: 0;
-    opacity: $carousel-control-hover-opacity;
+    opacity: $0carousel-control-hover-opacity;
   }
 }
 .carousel-control-prev {
   left: 0;
-  background-image: if($enable-gradients, linear-gradient(90deg, rgba($black, .25), rgba($black, .001)), null);
+  background-image: if($0enable-gradients, linear-gradient(90deg, rgba($0black, .25), rgba($0black, .001)), null);
 }
 .carousel-control-next {
   right: 0;
-  background-image: if($enable-gradients, linear-gradient(270deg, rgba($black, .25), rgba($black, .001)), null);
+  background-image: if($0enable-gradients, linear-gradient(270deg, rgba($0black, .25), rgba($0black, .001)), null);
 }
 
 // Icons for within
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
-  width: $carousel-control-icon-width;
-  height: $carousel-control-icon-width;
+  width: $0carousel-control-icon-width;
+  height: $0carousel-control-icon-width;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
@@ -144,10 +144,10 @@
   } ]
 } */
 .carousel-control-prev-icon {
-  background-image: escape-svg($carousel-control-prev-icon-bg);
+  background-image: escape-svg($0carousel-control-prev-icon-bg);
 }
 .carousel-control-next-icon {
-  background-image: escape-svg($carousel-control-next-icon-bg);
+  background-image: escape-svg($0carousel-control-next-icon-bg);
 }
 
 // Optional indicator pips/controls
@@ -165,33 +165,33 @@
   justify-content: center;
   padding: 0;
   // Use the .carousel-control's width as margin so we don't overlay those
-  margin-right: $carousel-control-width;
+  margin-right: $0carousel-control-width;
   margin-bottom: 1rem;
-  margin-left: $carousel-control-width;
+  margin-left: $0carousel-control-width;
   list-style: none;
 
   [data-bs-target] {
     box-sizing: content-box;
     flex: 0 1 auto;
-    width: $carousel-indicator-width;
-    height: $carousel-indicator-height;
+    width: $0carousel-indicator-width;
+    height: $0carousel-indicator-height;
     padding: 0;
-    margin-right: $carousel-indicator-spacer;
-    margin-left: $carousel-indicator-spacer;
+    margin-right: $0carousel-indicator-spacer;
+    margin-left: $0carousel-indicator-spacer;
     text-indent: -999px;
     cursor: pointer;
-    background-color: $carousel-indicator-active-bg;
+    background-color: $0carousel-indicator-active-bg;
     background-clip: padding-box;
     border: 0;
     // Use transparent borders to increase the hit area by 10px on top and bottom.
-    border-top: $carousel-indicator-hit-area-height solid transparent;
-    border-bottom: $carousel-indicator-hit-area-height solid transparent;
-    opacity: $carousel-indicator-opacity;
-    @include transition($carousel-indicator-transition);
+    border-top: $0carousel-indicator-hit-area-height solid transparent;
+    border-bottom: $0carousel-indicator-hit-area-height solid transparent;
+    opacity: $0carousel-indicator-opacity;
+    @include transition($0carousel-indicator-transition);
   }
 
   .active {
-    opacity: $carousel-indicator-active-opacity;
+    opacity: $0carousel-indicator-active-opacity;
   }
 }
 
@@ -202,12 +202,12 @@
 
 .carousel-caption {
   position: absolute;
-  right: (100% - $carousel-caption-width) / 2;
-  bottom: $carousel-caption-spacer;
-  left: (100% - $carousel-caption-width) / 2;
-  padding-top: $carousel-caption-padding-y;
-  padding-bottom: $carousel-caption-padding-y;
-  color: $carousel-caption-color;
+  right: (100% - $0carousel-caption-width) / 2;
+  bottom: $0carousel-caption-spacer;
+  left: (100% - $0carousel-caption-width) / 2;
+  padding-top: $0carousel-caption-padding-y;
+  padding-bottom: $0carousel-caption-padding-y;
+  color: $0carousel-caption-color;
   text-align: center;
 }
 
@@ -216,14 +216,14 @@
 .carousel-dark {
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
-    filter: $carousel-dark-control-icon-filter;
+    filter: $0carousel-dark-control-icon-filter;
   }
 
   .carousel-indicators [data-bs-target] {
-    background-color: $carousel-dark-indicator-active-bg;
+    background-color: $0carousel-dark-indicator-active-bg;
   }
 
   .carousel-caption {
-    color: $carousel-dark-caption-color;
+    color: $0carousel-dark-caption-color;
   }
 }
