--- a/scss/bootstrap/scss/_close.scss
+++ b/scss/bootstrap/scss/_close.scss
@@ -5,36 +5,36 @@
 
 .btn-close {
   box-sizing: content-box;
-  width: $btn-close-width;
-  height: $btn-close-height;
-  padding: $btn-close-padding-y $btn-close-padding-x;
-  color: $btn-close-color;
-  background: transparent escape-svg($btn-close-bg) center / $btn-close-width auto no-repeat; // include transparent for button elements
+  width: $0btn-close-width;
+  height: $0btn-close-height;
+  padding: $0btn-close-padding-y $0btn-close-padding-x;
+  color: $0btn-close-color;
+  background: transparent escape-svg($0btn-close-bg) center / $0btn-close-width auto no-repeat; // include transparent for button elements
   border: 0; // for button elements
   @include border-radius();
-  opacity: $btn-close-opacity;
+  opacity: $0btn-close-opacity;
 
   // Override <a>'s hover style
   &:hover {
-    color: $btn-close-color;
+    color: $0btn-close-color;
     text-decoration: none;
-    opacity: $btn-close-hover-opacity;
+    opacity: $0btn-close-hover-opacity;
   }
 
   &:focus {
     outline: 0;
-    box-shadow: $btn-close-focus-shadow;
-    opacity: $btn-close-focus-opacity;
+    box-shadow: $0btn-close-focus-shadow;
+    opacity: $0btn-close-focus-opacity;
   }
 
   &:disabled,
   &.disabled {
     pointer-events: none;
     user-select: none;
-    opacity: $btn-close-disabled-opacity;
+    opacity: $0btn-close-disabled-opacity;
   }
 }
 
 .btn-close-white {
-  filter: $btn-close-white-filter;
+  filter: $0btn-close-white-filter;
 }
