--- a/scss/bootstrap/scss/_dropdown.scss
+++ b/scss/bootstrap/scss/_dropdown.scss
@@ -16,25 +16,25 @@
 // The dropdown menu
 .dropdown-menu {
   position: absolute;
-  z-index: $zindex-dropdown;
+  z-index: $0zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
-  min-width: $dropdown-min-width;
-  padding: $dropdown-padding-y $dropdown-padding-x;
+  min-width: $0dropdown-min-width;
+  padding: $0dropdown-padding-y $0dropdown-padding-x;
   margin: 0; // Override default margin of ul
-  @include font-size($dropdown-font-size);
-  color: $dropdown-color;
+  @include font-size($0dropdown-font-size);
+  color: $0dropdown-color;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   list-style: none;
-  background-color: $dropdown-bg;
+  background-color: $0dropdown-bg;
   background-clip: padding-box;
-  border: $dropdown-border-width solid $dropdown-border-color;
-  @include border-radius($dropdown-border-radius);
-  @include box-shadow($dropdown-box-shadow);
+  border: $0dropdown-border-width solid $0dropdown-border-color;
+  @include border-radius($0dropdown-border-radius);
+  @include box-shadow($0dropdown-box-shadow);
 
   &[data-bs-popper] {
     top: 100%;
     left: 0;
-    margin-top: $dropdown-spacer;
+    margin-top: $0dropdown-spacer;
   }
 }
 
@@ -42,11 +42,11 @@
 // We deliberately hardcode the `bs-` prefix because we check
 // this custom property in JS to determine Popper's positioning
 
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+@each $0breakpoint in map-keys($0grid-breakpoints) {
+  @include media-breakpoint-up($0breakpoint) {
+    $0infix: breakpoint-infix($0breakpoint, $0grid-breakpoints);
 
-    .dropdown-menu#{$infix}-start {
+    .dropdown-menu#{$0infix}-start {
       --bs-position: start;
 
       &[data-bs-popper] {
@@ -55,7 +55,7 @@
       }
     }
 
-    .dropdown-menu#{$infix}-end {
+    .dropdown-menu#{$0infix}-end {
       --bs-position: end;
 
       &[data-bs-popper] {
@@ -74,7 +74,7 @@
     top: auto;
     bottom: 100%;
     margin-top: 0;
-    margin-bottom: $dropdown-spacer;
+    margin-bottom: $0dropdown-spacer;
   }
 
   .dropdown-toggle {
@@ -88,7 +88,7 @@
     right: auto;
     left: 100%;
     margin-top: 0;
-    margin-left: $dropdown-spacer;
+    margin-left: $0dropdown-spacer;
   }
 
   .dropdown-toggle {
@@ -105,7 +105,7 @@
     right: 100%;
     left: auto;
     margin-top: 0;
-    margin-right: $dropdown-spacer;
+    margin-right: $0dropdown-spacer;
   }
 
   .dropdown-toggle {
@@ -120,9 +120,9 @@
 // Dividers (basically an `<hr>`) within the dropdown
 .dropdown-divider {
   height: 0;
-  margin: $dropdown-divider-margin-y 0;
+  margin: $0dropdown-divider-margin-y 0;
   overflow: hidden;
-  border-top: 1px solid $dropdown-divider-bg;
+  border-top: 1px solid $0dropdown-divider-bg;
 }
 
 // Links, buttons, and more within the dropdown menu
@@ -131,49 +131,49 @@
 .dropdown-item {
   display: block;
   width: 100%; // For `<button>`s
-  padding: $dropdown-item-padding-y $dropdown-item-padding-x;
+  padding: $0dropdown-item-padding-y $0dropdown-item-padding-x;
   clear: both;
-  font-weight: $font-weight-normal;
-  color: $dropdown-link-color;
+  font-weight: $0font-weight-normal;
+  color: $0dropdown-link-color;
   text-align: inherit; // For `<button>`s
-  text-decoration: if($link-decoration == none, null, none);
+  text-decoration: if($0link-decoration == none, null, none);
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   background-color: transparent; // For `<button>`s
   border: 0; // For `<button>`s
 
   // Prevent dropdown overflow if there's no padding
   // See https://github.com/twbs/bootstrap/pull/27703
-  @if $dropdown-padding-y == 0 {
+  @if $0dropdown-padding-y == 0 {
     &:first-child {
-      @include border-top-radius($dropdown-inner-border-radius);
+      @include border-top-radius($0dropdown-inner-border-radius);
     }
 
     &:last-child {
-      @include border-bottom-radius($dropdown-inner-border-radius);
+      @include border-bottom-radius($0dropdown-inner-border-radius);
     }
   }
 
   &:hover,
   &:focus {
-    color: $dropdown-link-hover-color;
-    text-decoration: if($link-hover-decoration == underline, none, null);
-    @include gradient-bg($dropdown-link-hover-bg);
+    color: $0dropdown-link-hover-color;
+    text-decoration: if($0link-hover-decoration == underline, none, null);
+    @include gradient-bg($0dropdown-link-hover-bg);
   }
 
   &.active,
   &:active {
-    color: $dropdown-link-active-color;
+    color: $0dropdown-link-active-color;
     text-decoration: none;
-    @include gradient-bg($dropdown-link-active-bg);
+    @include gradient-bg($0dropdown-link-active-bg);
   }
 
   &.disabled,
   &:disabled {
-    color: $dropdown-link-disabled-color;
+    color: $0dropdown-link-disabled-color;
     pointer-events: none;
     background-color: transparent;
     // Remove CSS gradients if they're enabled
-    background-image: if($enable-gradients, none, null);
+    background-image: if($0enable-gradients, none, null);
   }
 }
 
@@ -184,57 +184,57 @@
 // Dropdown section headers
 .dropdown-header {
   display: block;
-  padding: $dropdown-header-padding;
+  padding: $0dropdown-header-padding;
   margin-bottom: 0; // for use with heading elements
-  @include font-size($font-size-sm);
-  color: $dropdown-header-color;
+  @include font-size($0font-size-sm);
+  color: $0dropdown-header-color;
   white-space: nowrap; // as with > li > a
 }
 
 // Dropdown text
 .dropdown-item-text {
   display: block;
-  padding: $dropdown-item-padding-y $dropdown-item-padding-x;
-  color: $dropdown-link-color;
+  padding: $0dropdown-item-padding-y $0dropdown-item-padding-x;
+  color: $0dropdown-link-color;
 }
 
 // Dark dropdowns
 .dropdown-menu-dark {
-  color: $dropdown-dark-color;
-  background-color: $dropdown-dark-bg;
-  border-color: $dropdown-dark-border-color;
-  @include box-shadow($dropdown-dark-box-shadow);
+  color: $0dropdown-dark-color;
+  background-color: $0dropdown-dark-bg;
+  border-color: $0dropdown-dark-border-color;
+  @include box-shadow($0dropdown-dark-box-shadow);
 
   .dropdown-item {
-    color: $dropdown-dark-link-color;
+    color: $0dropdown-dark-link-color;
 
     &:hover,
     &:focus {
-      color: $dropdown-dark-link-hover-color;
-      @include gradient-bg($dropdown-dark-link-hover-bg);
+      color: $0dropdown-dark-link-hover-color;
+      @include gradient-bg($0dropdown-dark-link-hover-bg);
     }
 
     &.active,
     &:active {
-      color: $dropdown-dark-link-active-color;
-      @include gradient-bg($dropdown-dark-link-active-bg);
+      color: $0dropdown-dark-link-active-color;
+      @include gradient-bg($0dropdown-dark-link-active-bg);
     }
 
     &.disabled,
     &:disabled {
-      color: $dropdown-dark-link-disabled-color;
+      color: $0dropdown-dark-link-disabled-color;
     }
   }
 
   .dropdown-divider {
-    border-color: $dropdown-dark-divider-bg;
+    border-color: $0dropdown-dark-divider-bg;
   }
 
   .dropdown-item-text {
-    color: $dropdown-dark-link-color;
+    color: $0dropdown-dark-link-color;
   }
 
   .dropdown-header {
-    color: $dropdown-dark-header-color;
+    color: $0dropdown-dark-header-color;
   }
 }
