--- a/scss/bootstrap/scss/_list-group.scss
+++ b/scss/bootstrap/scss/_list-group.scss
@@ -9,7 +9,7 @@
   // No need to set list-style: none; since .list-group-item is block level
   padding-left: 0; // reset padding because ul and ol
   margin-bottom: 0;
-  @include border-radius($list-group-border-radius);
+  @include border-radius($0list-group-border-radius);
 }
 
 .list-group-numbered {
@@ -31,21 +31,21 @@
 
 .list-group-item-action {
   width: 100%; // For `<button>`s (anchors become 100% by default though)
-  color: $list-group-action-color;
+  color: $0list-group-action-color;
   text-align: inherit; // For `<button>`s (anchors inherit)
 
   // Hover state
   &:hover,
   &:focus {
     z-index: 1; // Place hover/focus items above their siblings for proper border styling
-    color: $list-group-action-hover-color;
+    color: $0list-group-action-hover-color;
     text-decoration: none;
-    background-color: $list-group-hover-bg;
+    background-color: $0list-group-hover-bg;
   }
 
   &:active {
-    color: $list-group-action-active-color;
-    background-color: $list-group-action-active-bg;
+    color: $0list-group-action-active-color;
+    background-color: $0list-group-action-active-bg;
   }
 }
 
@@ -57,11 +57,11 @@
 .list-group-item {
   position: relative;
   display: block;
-  padding: $list-group-item-padding-y $list-group-item-padding-x;
-  color: $list-group-color;
-  text-decoration: if($link-decoration == none, null, none);
-  background-color: $list-group-bg;
-  border: $list-group-border-width solid $list-group-border-color;
+  padding: $0list-group-item-padding-y $0list-group-item-padding-x;
+  color: $0list-group-color;
+  text-decoration: if($0link-decoration == none, null, none);
+  background-color: $0list-group-bg;
+  border: $0list-group-border-width solid $0list-group-border-color;
 
   &:first-child {
     @include border-top-radius(inherit);
@@ -73,25 +73,25 @@
 
   &.disabled,
   &:disabled {
-    color: $list-group-disabled-color;
+    color: $0list-group-disabled-color;
     pointer-events: none;
-    background-color: $list-group-disabled-bg;
+    background-color: $0list-group-disabled-bg;
   }
 
   // Include both here for `<a>`s and `<button>`s
   &.active {
     z-index: 2; // Place active items above their siblings for proper border styling
-    color: $list-group-active-color;
-    background-color: $list-group-active-bg;
-    border-color: $list-group-active-border-color;
+    color: $0list-group-active-color;
+    background-color: $0list-group-active-bg;
+    border-color: $0list-group-active-border-color;
   }
 
   & + & {
     border-top-width: 0;
 
     &.active {
-      margin-top: -$list-group-border-width;
-      border-top-width: $list-group-border-width;
+      margin-top: -$0list-group-border-width;
+      border-top-width: $0list-group-border-width;
     }
   }
 }
@@ -101,21 +101,21 @@
 //
 // Change the layout of list group items from vertical (default) to horizontal.
 
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+@each $0breakpoint in map-keys($0grid-breakpoints) {
+  @include media-breakpoint-up($0breakpoint) {
+    $0infix: breakpoint-infix($0breakpoint, $0grid-breakpoints);
 
-    .list-group-horizontal#{$infix} {
+    .list-group-horizontal#{$0infix} {
       flex-direction: row;
 
       > .list-group-item {
         &:first-child {
-          @include border-bottom-start-radius($list-group-border-radius);
+          @include border-bottom-start-radius($0list-group-border-radius);
           @include border-top-end-radius(0);
         }
 
         &:last-child {
-          @include border-top-end-radius($list-group-border-radius);
+          @include border-top-end-radius($0list-group-border-radius);
           @include border-bottom-start-radius(0);
         }
 
@@ -124,12 +124,12 @@
         }
 
         + .list-group-item {
-          border-top-width: $list-group-border-width;
+          border-top-width: $0list-group-border-width;
           border-left-width: 0;
 
           &.active {
-            margin-left: -$list-group-border-width;
-            border-left-width: $list-group-border-width;
+            margin-left: -$0list-group-border-width;
+            border-left-width: $0list-group-border-width;
           }
         }
       }
@@ -147,7 +147,7 @@
   @include border-radius(0);
 
   > .list-group-item {
-    border-width: 0 0 $list-group-border-width;
+    border-width: 0 0 $0list-group-border-width;
 
     &:last-child {
       border-bottom-width: 0;
@@ -162,13 +162,13 @@
 // Add modifier classes to change text and background color on individual items.
 // Organizationally, this must come after the `:hover` states.
 
-@each $state, $value in $theme-colors {
-  $list-group-background: shift-color($value, $list-group-item-bg-scale);
-  $list-group-color: shift-color($value, $list-group-item-color-scale);
-  @if (contrast-ratio($list-group-background, $list-group-color) < $min-contrast-ratio) {
-    $list-group-color: mix($value, color-contrast($list-group-background), abs($list-group-item-color-scale));
+@each $0state, $0value in $0theme-colors {
+  $0list-group-background: shift-color($0value, $0list-group-item-bg-scale);
+  $0list-group-color: shift-color($0value, $0list-group-item-color-scale);
+  @if (contrast-ratio($0list-group-background, $0list-group-color) < $0min-contrast-ratio) {
+    $0list-group-color: mix($0value, color-contrast($0list-group-background), abs($0list-group-item-color-scale));
   }
 
-  @include list-group-item-variant($state, $list-group-background, $list-group-color);
+  @include list-group-item-variant($0state, $0list-group-background, $0list-group-color);
 }
 // scss-docs-end list-group-modifiers
