--- a/scss/bootstrap/scss/_modal.scss
+++ b/scss/bootstrap/scss/_modal.scss
@@ -19,7 +19,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: $zindex-modal;
+  z-index: $0zindex-modal;
   display: none;
   width: 100%;
   height: 100%;
@@ -36,27 +36,27 @@
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: $modal-dialog-margin;
+  margin: $0modal-dialog-margin;
   // allow clicks to pass through for custom click handling to close modal
   pointer-events: none;
 
   // When fading in the modal, animate it to slide down
   .modal.fade & {
-    @include transition($modal-transition);
-    transform: $modal-fade-transform;
+    @include transition($0modal-transition);
+    transform: $0modal-fade-transform;
   }
   .modal.show & {
-    transform: $modal-show-transform;
+    transform: $0modal-show-transform;
   }
 
   // When trying to close, animate focus to scale
   .modal.modal-static & {
-    transform: $modal-scale-transform;
+    transform: $0modal-scale-transform;
   }
 }
 
 .modal-dialog-scrollable {
-  height: subtract(100%, $modal-dialog-margin * 2);
+  height: subtract(100%, $0modal-dialog-margin * 2);
 
   .modal-content {
     max-height: 100%;
@@ -71,7 +71,7 @@
 .modal-dialog-centered {
   display: flex;
   align-items: center;
-  min-height: subtract(100%, $modal-dialog-margin * 2);
+  min-height: subtract(100%, $0modal-dialog-margin * 2);
 }
 
 // Actual modal
@@ -81,13 +81,13 @@
   flex-direction: column;
   width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
   // counteract the pointer-events: none; in the .modal-dialog
-  color: $modal-content-color;
+  color: $0modal-content-color;
   pointer-events: auto;
-  background-color: $modal-content-bg;
+  background-color: $0modal-content-bg;
   background-clip: padding-box;
-  border: $modal-content-border-width solid $modal-content-border-color;
-  @include border-radius($modal-content-border-radius);
-  @include box-shadow($modal-content-box-shadow-xs);
+  border: $0modal-content-border-width solid $0modal-content-border-color;
+  @include border-radius($0modal-content-border-radius);
+  @include box-shadow($0modal-content-box-shadow-xs);
   // Remove focus outline from opened modal
   outline: 0;
 }
@@ -97,14 +97,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: $zindex-modal-backdrop;
+  z-index: $0zindex-modal-backdrop;
   width: 100vw;
   height: 100vh;
-  background-color: $modal-backdrop-bg;
+  background-color: $0modal-backdrop-bg;
 
   // Fade for backdrop
   &.fade { opacity: 0; }
-  &.show { opacity: $modal-backdrop-opacity; }
+  &.show { opacity: $0modal-backdrop-opacity; }
 }
 
 // Modal header
@@ -114,20 +114,20 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between; // Put modal header elements (title and dismiss) on opposite ends
-  padding: $modal-header-padding;
-  border-bottom: $modal-header-border-width solid $modal-header-border-color;
-  @include border-top-radius($modal-content-inner-border-radius);
+  padding: $0modal-header-padding;
+  border-bottom: $0modal-header-border-width solid $0modal-header-border-color;
+  @include border-top-radius($0modal-content-inner-border-radius);
 
   .btn-close {
-    padding: ($modal-header-padding-y / 2) ($modal-header-padding-x / 2);
-    margin: ($modal-header-padding-y / -2) ($modal-header-padding-x / -2) ($modal-header-padding-y / -2) auto;
+    padding: ($0modal-header-padding-y / 2) ($0modal-header-padding-x / 2);
+    margin: ($0modal-header-padding-y / -2) ($0modal-header-padding-x / -2) ($0modal-header-padding-y / -2) auto;
   }
 }
 
 // Title text within header
 .modal-title {
   margin-bottom: 0;
-  line-height: $modal-title-line-height;
+  line-height: $0modal-title-line-height;
 }
 
 // Modal body
@@ -137,7 +137,7 @@
   // Enable `flex-grow: 1` so that the body take up as much space as possible
   // when there should be a fixed height on `.modal-dialog`.
   flex: 1 1 auto;
-  padding: $modal-inner-padding;
+  padding: $0modal-inner-padding;
 }
 
 // Footer (for actions)
@@ -147,15 +147,15 @@
   flex-shrink: 0;
   align-items: center; // vertically center
   justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
-  padding: $modal-inner-padding - $modal-footer-margin-between / 2;
-  border-top: $modal-footer-border-width solid $modal-footer-border-color;
-  @include border-bottom-radius($modal-content-inner-border-radius);
+  padding: $0modal-inner-padding - $0modal-footer-margin-between / 2;
+  border-top: $0modal-footer-border-width solid $0modal-footer-border-color;
+  @include border-bottom-radius($0modal-content-inner-border-radius);
 
   // Place margin between footer elements
   // This solution is far from ideal because of the universal selector usage,
   // but is needed to fix https://github.com/twbs/bootstrap/issues/24800
   > * {
-    margin: $modal-footer-margin-between / 2;
+    margin: $0modal-footer-margin-between / 2;
   }
 }
 
@@ -163,43 +163,43 @@
 @include media-breakpoint-up(sm) {
   // Automatically set modal's width for larger viewports
   .modal-dialog {
-    max-width: $modal-md;
-    margin: $modal-dialog-margin-y-sm-up auto;
+    max-width: $0modal-md;
+    margin: $0modal-dialog-margin-y-sm-up auto;
   }
 
   .modal-dialog-scrollable {
-    height: subtract(100%, $modal-dialog-margin-y-sm-up * 2);
+    height: subtract(100%, $0modal-dialog-margin-y-sm-up * 2);
   }
 
   .modal-dialog-centered {
-    min-height: subtract(100%, $modal-dialog-margin-y-sm-up * 2);
+    min-height: subtract(100%, $0modal-dialog-margin-y-sm-up * 2);
   }
 
   .modal-content {
-    @include box-shadow($modal-content-box-shadow-sm-up);
+    @include box-shadow($0modal-content-box-shadow-sm-up);
   }
 
-  .modal-sm { max-width: $modal-sm; }
+  .modal-sm { max-width: $0modal-sm; }
 }
 
 @include media-breakpoint-up(lg) {
   .modal-lg,
   .modal-xl {
-    max-width: $modal-lg;
+    max-width: $0modal-lg;
   }
 }
 
 @include media-breakpoint-up(xl) {
-  .modal-xl { max-width: $modal-xl; }
+  .modal-xl { max-width: $0modal-xl; }
 }
 
 // scss-docs-start modal-fullscreen-loop
-@each $breakpoint in map-keys($grid-breakpoints) {
-  $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
-  $postfix: if($infix != "", $infix + "-down", "");
+@each $0breakpoint in map-keys($0grid-breakpoints) {
+  $0infix: breakpoint-infix($0breakpoint, $0grid-breakpoints);
+  $0postfix: if($0infix != "", $0infix + "-down", "");
 
-  @include media-breakpoint-down($breakpoint) {
-    .modal-fullscreen#{$postfix} {
+  @include media-breakpoint-down($0breakpoint) {
+    .modal-fullscreen#{$0postfix} {
       width: 100vw;
       max-width: none;
       height: 100%;
