--- a/scss/bootstrap/scss/_nav.scss
+++ b/scss/bootstrap/scss/_nav.scss
@@ -13,22 +13,22 @@
 
 .nav-link {
   display: block;
-  padding: $nav-link-padding-y $nav-link-padding-x;
-  @include font-size($nav-link-font-size);
-  font-weight: $nav-link-font-weight;
-  color: $nav-link-color;
-  text-decoration: if($link-decoration == none, null, none);
-  @include transition($nav-link-transition);
+  padding: $0nav-link-padding-y $0nav-link-padding-x;
+  @include font-size($0nav-link-font-size);
+  font-weight: $0nav-link-font-weight;
+  color: $0nav-link-color;
+  text-decoration: if($0link-decoration == none, null, none);
+  @include transition($0nav-link-transition);
 
   &:hover,
   &:focus {
-    color: $nav-link-hover-color;
-    text-decoration: if($link-hover-decoration == underline, none, null);
+    color: $0nav-link-hover-color;
+    text-decoration: if($0link-hover-decoration == underline, none, null);
   }
 
   // Disabled state lightens text
   &.disabled {
-    color: $nav-link-disabled-color;
+    color: $0nav-link-disabled-color;
     pointer-events: none;
     cursor: default;
   }
@@ -39,23 +39,23 @@
 //
 
 .nav-tabs {
-  border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
+  border-bottom: $0nav-tabs-border-width solid $0nav-tabs-border-color;
 
   .nav-link {
-    margin-bottom: -$nav-tabs-border-width;
+    margin-bottom: -$0nav-tabs-border-width;
     background: none;
-    border: $nav-tabs-border-width solid transparent;
-    @include border-top-radius($nav-tabs-border-radius);
+    border: $0nav-tabs-border-width solid transparent;
+    @include border-top-radius($0nav-tabs-border-radius);
 
     &:hover,
     &:focus {
-      border-color: $nav-tabs-link-hover-border-color;
+      border-color: $0nav-tabs-link-hover-border-color;
       // Prevents active .nav-link tab overlapping focus outline of previous/next .nav-link
       isolation: isolate;
     }
 
     &.disabled {
-      color: $nav-link-disabled-color;
+      color: $0nav-link-disabled-color;
       background-color: transparent;
       border-color: transparent;
     }
@@ -63,14 +63,14 @@
 
   .nav-link.active,
   .nav-item.show .nav-link {
-    color: $nav-tabs-link-active-color;
-    background-color: $nav-tabs-link-active-bg;
-    border-color: $nav-tabs-link-active-border-color;
+    color: $0nav-tabs-link-active-color;
+    background-color: $0nav-tabs-link-active-bg;
+    border-color: $0nav-tabs-link-active-border-color;
   }
 
   .dropdown-menu {
     // Make dropdown border overlap tab border
-    margin-top: -$nav-tabs-border-width;
+    margin-top: -$0nav-tabs-border-width;
     // Remove the top rounded corners here since there is a hard edge above the menu
     @include border-top-radius(0);
   }
@@ -85,13 +85,13 @@
   .nav-link {
     background: none;
     border: 0;
-    @include border-radius($nav-pills-border-radius);
+    @include border-radius($0nav-pills-border-radius);
   }
 
   .nav-link.active,
   .show > .nav-link {
-    color: $nav-pills-link-active-color;
-    @include gradient-bg($nav-pills-link-active-bg);
+    color: $0nav-pills-link-active-color;
+    @include gradient-bg($0nav-pills-link-active-bg);
   }
 }
 
