--- a/scss/bootstrap/scss/_offcanvas.scss
+++ b/scss/bootstrap/scss/_offcanvas.scss
@@ -1,55 +1,55 @@
 .offcanvas {
   position: fixed;
   bottom: 0;
-  z-index: $zindex-offcanvas;
+  z-index: $0zindex-offcanvas;
   display: flex;
   flex-direction: column;
   max-width: 100%;
-  color: $offcanvas-color;
+  color: $0offcanvas-color;
   visibility: hidden;
-  background-color: $offcanvas-bg-color;
+  background-color: $0offcanvas-bg-color;
   background-clip: padding-box;
   outline: 0;
-  @include box-shadow($offcanvas-box-shadow);
-  @include transition(transform $offcanvas-transition-duration ease-in-out);
+  @include box-shadow($0offcanvas-box-shadow);
+  @include transition(transform $0offcanvas-transition-duration ease-in-out);
 }
 
 .offcanvas-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: $offcanvas-padding-y $offcanvas-padding-x;
+  padding: $0offcanvas-padding-y $0offcanvas-padding-x;
 
   .btn-close {
-    padding: ($offcanvas-padding-y / 2) ($offcanvas-padding-x / 2);
-    margin: ($offcanvas-padding-y / -2) ($offcanvas-padding-x / -2) ($offcanvas-padding-y / -2) auto;
+    padding: ($0offcanvas-padding-y / 2) ($0offcanvas-padding-x / 2);
+    margin: ($0offcanvas-padding-y / -2) ($0offcanvas-padding-x / -2) ($0offcanvas-padding-y / -2) auto;
   }
 }
 
 .offcanvas-title {
   margin-bottom: 0;
-  line-height: $offcanvas-title-line-height;
+  line-height: $0offcanvas-title-line-height;
 }
 
 .offcanvas-body {
   flex-grow: 1;
-  padding: $offcanvas-padding-y $offcanvas-padding-x;
+  padding: $0offcanvas-padding-y $0offcanvas-padding-x;
   overflow-y: auto;
 }
 
 .offcanvas-start {
   top: 0;
   left: 0;
-  width: $offcanvas-horizontal-width;
-  border-right: $offcanvas-border-width solid $offcanvas-border-color;
+  width: $0offcanvas-horizontal-width;
+  border-right: $0offcanvas-border-width solid $0offcanvas-border-color;
   transform: translateX(-100%);
 }
 
 .offcanvas-end {
   top: 0;
   right: 0;
-  width: $offcanvas-horizontal-width;
-  border-left: $offcanvas-border-width solid $offcanvas-border-color;
+  width: $0offcanvas-horizontal-width;
+  border-left: $0offcanvas-border-width solid $0offcanvas-border-color;
   transform: translateX(100%);
 }
 
@@ -57,18 +57,18 @@
   top: 0;
   right: 0;
   left: 0;
-  height: $offcanvas-vertical-height;
+  height: $0offcanvas-vertical-height;
   max-height: 100%;
-  border-bottom: $offcanvas-border-width solid $offcanvas-border-color;
+  border-bottom: $0offcanvas-border-width solid $0offcanvas-border-color;
   transform: translateY(-100%);
 }
 
 .offcanvas-bottom {
   right: 0;
   left: 0;
-  height: $offcanvas-vertical-height;
+  height: $0offcanvas-vertical-height;
   max-height: 100%;
-  border-top: $offcanvas-border-width solid $offcanvas-border-color;
+  border-top: $0offcanvas-border-width solid $0offcanvas-border-color;
   transform: translateY(100%);
 }
 
