--- a/scss/bootstrap/scss/_progress.scss
+++ b/scss/bootstrap/scss/_progress.scss
@@ -1,21 +1,21 @@
 // Disable animation if transitions are disabled
 
 // scss-docs-start progress-keyframes
-@if $enable-transitions {
+@if $0enable-transitions {
   @keyframes progress-bar-stripes {
-    0% { background-position-x: $progress-height; }
+    0% { background-position-x: $0progress-height; }
   }
 }
 // scss-docs-end progress-keyframes
 
 .progress {
   display: flex;
-  height: $progress-height;
+  height: $0progress-height;
   overflow: hidden; // force rounded corners by cropping it
-  @include font-size($progress-font-size);
-  background-color: $progress-bg;
-  @include border-radius($progress-border-radius);
-  @include box-shadow($progress-box-shadow);
+  @include font-size($0progress-font-size);
+  background-color: $0progress-bg;
+  @include border-radius($0progress-border-radius);
+  @include box-shadow($0progress-box-shadow);
 }
 
 .progress-bar {
@@ -23,23 +23,23 @@
   flex-direction: column;
   justify-content: center;
   overflow: hidden;
-  color: $progress-bar-color;
+  color: $0progress-bar-color;
   text-align: center;
   white-space: nowrap;
-  background-color: $progress-bar-bg;
-  @include transition($progress-bar-transition);
+  background-color: $0progress-bar-bg;
+  @include transition($0progress-bar-transition);
 }
 
 .progress-bar-striped {
   @include gradient-striped();
-  background-size: $progress-height $progress-height;
+  background-size: $0progress-height $0progress-height;
 }
 
-@if $enable-transitions {
+@if $0enable-transitions {
   .progress-bar-animated {
-    animation: $progress-bar-animation-timing progress-bar-stripes;
+    animation: $0progress-bar-animation-timing progress-bar-stripes;
 
-    @if $enable-reduced-motion {
+    @if $0enable-reduced-motion {
       @media (prefers-reduced-motion: reduce) {
         animation: none;
       }
