--- a/scss/bootstrap/scss/_root.scss
+++ b/scss/bootstrap/scss/_root.scss
@@ -1,16 +1,16 @@
 :root {
   // Custom variable values only support SassScript inside `#{}`.
-  @each $color, $value in $colors {
-    --#{$variable-prefix}#{$color}: #{$value};
+  @each $0color, $0value in $0colors {
+    --#{$0variable-prefix}#{$0color}: #{$0value};
   }
 
-  @each $color, $value in $theme-colors {
-    --#{$variable-prefix}#{$color}: #{$value};
+  @each $0color, $0value in $0theme-colors {
+    --#{$0variable-prefix}#{$0color}: #{$0value};
   }
 
   // Use `inspect` for lists so that quoted items keep the quotes.
   // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
-  --#{$variable-prefix}font-sans-serif: #{inspect($font-family-sans-serif)};
-  --#{$variable-prefix}font-monospace: #{inspect($font-family-monospace)};
-  --#{$variable-prefix}gradient: #{$gradient};
+  --#{$0variable-prefix}font-sans-serif: #{inspect($0font-family-sans-serif)};
+  --#{$0variable-prefix}font-monospace: #{inspect($0font-family-monospace)};
+  --#{$0variable-prefix}gradient: #{$0gradient};
 }
