--- a/scss/bootstrap/scss/_spinners.scss
+++ b/scss/bootstrap/scss/_spinners.scss
@@ -10,20 +10,20 @@
 
 .spinner-border {
   display: inline-block;
-  width: $spinner-width;
-  height: $spinner-height;
-  vertical-align: $spinner-vertical-align;
-  border: $spinner-border-width solid currentColor;
+  width: $0spinner-width;
+  height: $0spinner-height;
+  vertical-align: $0spinner-vertical-align;
+  border: $0spinner-border-width solid currentColor;
   border-right-color: transparent;
   // stylelint-disable-next-line property-disallowed-list
   border-radius: 50%;
-  animation: $spinner-animation-speed linear infinite spinner-border;
+  animation: $0spinner-animation-speed linear infinite spinner-border;
 }
 
 .spinner-border-sm {
-  width: $spinner-width-sm;
-  height: $spinner-height-sm;
-  border-width: $spinner-border-width-sm;
+  width: $0spinner-width-sm;
+  height: $0spinner-height-sm;
+  border-width: $0spinner-border-width-sm;
 }
 
 //
@@ -44,26 +44,26 @@
 
 .spinner-grow {
   display: inline-block;
-  width: $spinner-width;
-  height: $spinner-height;
-  vertical-align: $spinner-vertical-align;
+  width: $0spinner-width;
+  height: $0spinner-height;
+  vertical-align: $0spinner-vertical-align;
   background-color: currentColor;
   // stylelint-disable-next-line property-disallowed-list
   border-radius: 50%;
   opacity: 0;
-  animation: $spinner-animation-speed linear infinite spinner-grow;
+  animation: $0spinner-animation-speed linear infinite spinner-grow;
 }
 
 .spinner-grow-sm {
-  width: $spinner-width-sm;
-  height: $spinner-height-sm;
+  width: $0spinner-width-sm;
+  height: $0spinner-height-sm;
 }
 
-@if $enable-reduced-motion {
+@if $0enable-reduced-motion {
   @media (prefers-reduced-motion: reduce) {
     .spinner-border,
     .spinner-grow {
-      animation-duration: $spinner-animation-speed * 2;
+      animation-duration: $0spinner-animation-speed * 2;
     }
   }
 }
