--- a/scss/bootstrap/scss/_tooltip.scss
+++ b/scss/bootstrap/scss/_tooltip.scss
@@ -1,24 +1,24 @@
 // Base class
 .tooltip {
   position: absolute;
-  z-index: $zindex-tooltip;
+  z-index: $0zindex-tooltip;
   display: block;
-  margin: $tooltip-margin;
+  margin: $0tooltip-margin;
   // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
   // So reset our font and text properties to avoid inheriting weird values.
   @include reset-text();
-  @include font-size($tooltip-font-size);
+  @include font-size($0tooltip-font-size);
   // Allow breaking very long words so they don't overflow the tooltip's bounds
   word-wrap: break-word;
   opacity: 0;
 
-  &.show { opacity: $tooltip-opacity; }
+  &.show { opacity: $0tooltip-opacity; }
 
   .tooltip-arrow {
     position: absolute;
     display: block;
-    width: $tooltip-arrow-width;
-    height: $tooltip-arrow-height;
+    width: $0tooltip-arrow-width;
+    height: $0tooltip-arrow-height;
 
     &::before {
       position: absolute;
@@ -30,61 +30,61 @@
 }
 
 .bs-tooltip-top {
-  padding: $tooltip-arrow-height 0;
+  padding: $0tooltip-arrow-height 0;
 
   .tooltip-arrow {
     bottom: 0;
 
     &::before {
       top: -1px;
-      border-width: $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
-      border-top-color: $tooltip-arrow-color;
+      border-width: $0tooltip-arrow-height ($0tooltip-arrow-width / 2) 0;
+      border-top-color: $0tooltip-arrow-color;
     }
   }
 }
 
 .bs-tooltip-end {
-  padding: 0 $tooltip-arrow-height;
+  padding: 0 $0tooltip-arrow-height;
 
   .tooltip-arrow {
     left: 0;
-    width: $tooltip-arrow-height;
-    height: $tooltip-arrow-width;
+    width: $0tooltip-arrow-height;
+    height: $0tooltip-arrow-width;
 
     &::before {
       right: -1px;
-      border-width: ($tooltip-arrow-width / 2) $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
-      border-right-color: $tooltip-arrow-color;
+      border-width: ($0tooltip-arrow-width / 2) $0tooltip-arrow-height ($0tooltip-arrow-width / 2) 0;
+      border-right-color: $0tooltip-arrow-color;
     }
   }
 }
 
 .bs-tooltip-bottom {
-  padding: $tooltip-arrow-height 0;
+  padding: $0tooltip-arrow-height 0;
 
   .tooltip-arrow {
     top: 0;
 
     &::before {
       bottom: -1px;
-      border-width: 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
-      border-bottom-color: $tooltip-arrow-color;
+      border-width: 0 ($0tooltip-arrow-width / 2) $0tooltip-arrow-height;
+      border-bottom-color: $0tooltip-arrow-color;
     }
   }
 }
 
 .bs-tooltip-start {
-  padding: 0 $tooltip-arrow-height;
+  padding: 0 $0tooltip-arrow-height;
 
   .tooltip-arrow {
     right: 0;
-    width: $tooltip-arrow-height;
-    height: $tooltip-arrow-width;
+    width: $0tooltip-arrow-height;
+    height: $0tooltip-arrow-width;
 
     &::before {
       left: -1px;
-      border-width: ($tooltip-arrow-width / 2) 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
-      border-left-color: $tooltip-arrow-color;
+      border-width: ($0tooltip-arrow-width / 2) 0 ($0tooltip-arrow-width / 2) $0tooltip-arrow-height;
+      border-left-color: $0tooltip-arrow-color;
     }
   }
 }
@@ -106,10 +106,10 @@
 
 // Wrapper for the tooltip content
 .tooltip-inner {
-  max-width: $tooltip-max-width;
-  padding: $tooltip-padding-y $tooltip-padding-x;
-  color: $tooltip-color;
+  max-width: $0tooltip-max-width;
+  padding: $0tooltip-padding-y $0tooltip-padding-x;
+  color: $0tooltip-color;
   text-align: center;
-  background-color: $tooltip-bg;
-  @include border-radius($tooltip-border-radius);
+  background-color: $0tooltip-bg;
+  @include border-radius($0tooltip-border-radius);
 }
