--- a/scss/bootstrap/scss/_type.scss
+++ b/scss/bootstrap/scss/_type.scss
@@ -27,16 +27,16 @@
 
 
 .lead {
-  @include font-size($lead-font-size);
-  font-weight: $lead-font-weight;
+  @include font-size($0lead-font-size);
+  font-weight: $0lead-font-weight;
 }
 
 // Type display classes
-@each $display, $font-size in $display-font-sizes {
-  .display-#{$display} {
-    @include font-size($font-size);
-    font-weight: $display-font-weight;
-    line-height: $display-line-height;
+@each $0display, $0font-size in $0display-font-sizes {
+  .display-#{$0display} {
+    @include font-size($0font-size);
+    font-weight: $0display-font-weight;
+    line-height: $0display-line-height;
   }
 }
 
@@ -67,7 +67,7 @@
   display: inline-block;
 
   &:not(:last-child) {
-    margin-right: $list-inline-padding;
+    margin-right: $0list-inline-padding;
   }
 }
 
@@ -78,14 +78,14 @@
 
 // Builds on `abbr`
 .initialism {
-  @include font-size($initialism-font-size);
+  @include font-size($0initialism-font-size);
   text-transform: uppercase;
 }
 
 // Blockquotes
 .blockquote {
-  margin-bottom: $blockquote-margin-y;
-  @include font-size($blockquote-font-size);
+  margin-bottom: $0blockquote-margin-y;
+  @include font-size($0blockquote-font-size);
 
   > :last-child {
     margin-bottom: 0;
@@ -93,10 +93,10 @@
 }
 
 .blockquote-footer {
-  margin-top: -$blockquote-margin-y;
-  margin-bottom: $blockquote-margin-y;
-  @include font-size($blockquote-footer-font-size);
-  color: $blockquote-footer-color;
+  margin-top: -$0blockquote-margin-y;
+  margin-bottom: $0blockquote-margin-y;
+  @include font-size($0blockquote-footer-font-size);
+  color: $0blockquote-footer-color;
 
   &::before {
     content: "\2014\00A0"; // em dash, nbsp
