--- a/scss/bootstrap/scss/forms/_floating-labels.scss
+++ b/scss/bootstrap/scss/forms/_floating-labels.scss
@@ -3,8 +3,8 @@
 
   > .form-control,
   > .form-select {
-    height: $form-floating-height;
-    padding: $form-floating-padding-y $form-floating-padding-x;
+    height: $0form-floating-height;
+    padding: $0form-floating-padding-y $0form-floating-padding-x;
   }
 
   > label {
@@ -12,11 +12,11 @@
     top: 0;
     left: 0;
     height: 100%; // allow textareas
-    padding: $form-floating-padding-y $form-floating-padding-x;
+    padding: $0form-floating-padding-y $0form-floating-padding-x;
     pointer-events: none;
-    border: $input-border-width solid transparent; // Required for aligning label's text with the input as it affects inner box model
+    border: $0input-border-width solid transparent; // Required for aligning label's text with the input as it affects inner box model
     transform-origin: 0 0;
-    @include transition($form-floating-transition);
+    @include transition($0form-floating-transition);
   }
 
   // stylelint-disable no-duplicate-selectors
@@ -27,34 +27,34 @@
 
     &:focus,
     &:not(:placeholder-shown) {
-      padding-top: $form-floating-input-padding-t;
-      padding-bottom: $form-floating-input-padding-b;
+      padding-top: $0form-floating-input-padding-t;
+      padding-bottom: $0form-floating-input-padding-b;
     }
     // Duplicated because `:-webkit-autofill` invalidates other selectors when grouped
     &:-webkit-autofill {
-      padding-top: $form-floating-input-padding-t;
-      padding-bottom: $form-floating-input-padding-b;
+      padding-top: $0form-floating-input-padding-t;
+      padding-bottom: $0form-floating-input-padding-b;
     }
   }
 
   > .form-select {
-    padding-top: $form-floating-input-padding-t;
-    padding-bottom: $form-floating-input-padding-b;
+    padding-top: $0form-floating-input-padding-t;
+    padding-bottom: $0form-floating-input-padding-b;
   }
 
   > .form-control:focus,
   > .form-control:not(:placeholder-shown),
   > .form-select {
     ~ label {
-      opacity: $form-floating-label-opacity;
-      transform: $form-floating-label-transform;
+      opacity: $0form-floating-label-opacity;
+      transform: $0form-floating-label-transform;
     }
   }
   // Duplicated because `:-webkit-autofill` invalidates other selectors when grouped
   > .form-control:-webkit-autofill {
     ~ label {
-      opacity: $form-floating-label-opacity;
-      transform: $form-floating-label-transform;
+      opacity: $0form-floating-label-opacity;
+      transform: $0form-floating-label-transform;
     }
   }
   // stylelint-enable no-duplicate-selectors
