--- a/scss/bootstrap/scss/forms/_form-control.scss
+++ b/scss/bootstrap/scss/forms/_form-control.scss
@@ -5,22 +5,22 @@
 .form-control {
   display: block;
   width: 100%;
-  padding: $input-padding-y $input-padding-x;
-  font-family: $input-font-family;
-  @include font-size($input-font-size);
-  font-weight: $input-font-weight;
-  line-height: $input-line-height;
-  color: $input-color;
-  background-color: $input-bg;
+  padding: $0input-padding-y $0input-padding-x;
+  font-family: $0input-font-family;
+  @include font-size($0input-font-size);
+  font-weight: $0input-font-weight;
+  line-height: $0input-line-height;
+  color: $0input-color;
+  background-color: $0input-bg;
   background-clip: padding-box;
-  border: $input-border-width solid $input-border-color;
+  border: $0input-border-width solid $0input-border-color;
   appearance: none; // Fix appearance for date inputs in Safari
 
   // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-  @include border-radius($input-border-radius, 0);
+  @include border-radius($0input-border-radius, 0);
 
-  @include box-shadow($input-box-shadow);
-  @include transition($input-transition);
+  @include box-shadow($0input-box-shadow);
+  @include transition($0input-transition);
 
   &[type="file"] {
     overflow: hidden; // prevent pseudo element button overlap
@@ -32,15 +32,15 @@
 
   // Customize the `:focus` state to imitate native WebKit styles.
   &:focus {
-    color: $input-focus-color;
-    background-color: $input-focus-bg;
-    border-color: $input-focus-border-color;
+    color: $0input-focus-color;
+    background-color: $0input-focus-bg;
+    border-color: $0input-focus-border-color;
     outline: 0;
-    @if $enable-shadows {
-      @include box-shadow($input-box-shadow, $input-focus-box-shadow);
+    @if $0enable-shadows {
+      @include box-shadow($0input-box-shadow, $0input-focus-box-shadow);
     } @else {
       // Avoid using mixin so we can pass custom focus shadow properly
-      box-shadow: $input-focus-box-shadow;
+      box-shadow: $0input-focus-box-shadow;
     }
   }
 
@@ -49,12 +49,12 @@
   // TODO: we can remove this workaround once https://bugs.webkit.org/show_bug.cgi?id=198959 is resolved
   &::-webkit-date-and-time-value {
     // Multiply line-height by 1em if it has no unit
-    height: if(unit($input-line-height) == "", $input-line-height * 1em, $input-line-height);
+    height: if(unit($0input-line-height) == "", $0input-line-height * 1em, $0input-line-height);
   }
 
   // Placeholder
   &::placeholder {
-    color: $input-placeholder-color;
+    color: $0input-placeholder-color;
     // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
     opacity: 1;
   }
@@ -66,49 +66,49 @@
   // don't honor that edge case; we style them as disabled anyway.
   &:disabled,
   &:read-only {
-    background-color: $input-disabled-bg;
-    border-color: $input-disabled-border-color;
+    background-color: $0input-disabled-bg;
+    border-color: $0input-disabled-border-color;
     // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
     opacity: 1;
   }
 
   // File input buttons theming
   &::file-selector-button {
-    padding: $input-padding-y $input-padding-x;
-    margin: (-$input-padding-y) (-$input-padding-x);
-    margin-inline-end: $input-padding-x;
-    color: $form-file-button-color;
-    @include gradient-bg($form-file-button-bg);
+    padding: $0input-padding-y $0input-padding-x;
+    margin: (-$0input-padding-y) (-$0input-padding-x);
+    margin-inline-end: $0input-padding-x;
+    color: $0form-file-button-color;
+    @include gradient-bg($0form-file-button-bg);
     pointer-events: none;
     border-color: inherit;
     border-style: solid;
     border-width: 0;
-    border-inline-end-width: $input-border-width;
+    border-inline-end-width: $0input-border-width;
     border-radius: 0; // stylelint-disable-line property-disallowed-list
-    @include transition($btn-transition);
+    @include transition($0btn-transition);
   }
 
   &:hover:not(:disabled):not(:read-only)::file-selector-button {
-    background-color: $form-file-button-hover-bg;
+    background-color: $0form-file-button-hover-bg;
   }
 
   &::-webkit-file-upload-button {
-    padding: $input-padding-y $input-padding-x;
-    margin: (-$input-padding-y) (-$input-padding-x);
-    margin-inline-end: $input-padding-x;
-    color: $form-file-button-color;
-    @include gradient-bg($form-file-button-bg);
+    padding: $0input-padding-y $0input-padding-x;
+    margin: (-$0input-padding-y) (-$0input-padding-x);
+    margin-inline-end: $0input-padding-x;
+    color: $0form-file-button-color;
+    @include gradient-bg($0form-file-button-bg);
     pointer-events: none;
     border-color: inherit;
     border-style: solid;
     border-width: 0;
-    border-inline-end-width: $input-border-width;
+    border-inline-end-width: $0input-border-width;
     border-radius: 0; // stylelint-disable-line property-disallowed-list
-    @include transition($btn-transition);
+    @include transition($0btn-transition);
   }
 
   &:hover:not(:disabled):not(:read-only)::-webkit-file-upload-button {
-    background-color: $form-file-button-hover-bg;
+    background-color: $0form-file-button-hover-bg;
   }
 }
 
@@ -120,13 +120,13 @@
 .form-control-plaintext {
   display: block;
   width: 100%;
-  padding: $input-padding-y 0;
+  padding: $0input-padding-y 0;
   margin-bottom: 0; // match inputs if this class comes on inputs with default margins
-  line-height: $input-line-height;
-  color: $input-plaintext-color;
+  line-height: $0input-line-height;
+  color: $0input-plaintext-color;
   background-color: transparent;
   border: solid transparent;
-  border-width: $input-border-width 0;
+  border-width: $0input-border-width 0;
 
   &.form-control-sm,
   &.form-control-lg {
@@ -143,40 +143,40 @@
 // Repeated in `_input_group.scss` to avoid Sass extend issues.
 
 .form-control-sm {
-  min-height: $input-height-sm;
-  padding: $input-padding-y-sm $input-padding-x-sm;
-  @include font-size($input-font-size-sm);
-  @include border-radius($input-border-radius-sm);
+  min-height: $0input-height-sm;
+  padding: $0input-padding-y-sm $0input-padding-x-sm;
+  @include font-size($0input-font-size-sm);
+  @include border-radius($0input-border-radius-sm);
 
   &::file-selector-button {
-    padding: $input-padding-y-sm $input-padding-x-sm;
-    margin: (-$input-padding-y-sm) (-$input-padding-x-sm);
-    margin-inline-end: $input-padding-x-sm;
+    padding: $0input-padding-y-sm $0input-padding-x-sm;
+    margin: (-$0input-padding-y-sm) (-$0input-padding-x-sm);
+    margin-inline-end: $0input-padding-x-sm;
   }
 
   &::-webkit-file-upload-button {
-    padding: $input-padding-y-sm $input-padding-x-sm;
-    margin: (-$input-padding-y-sm) (-$input-padding-x-sm);
-    margin-inline-end: $input-padding-x-sm;
+    padding: $0input-padding-y-sm $0input-padding-x-sm;
+    margin: (-$0input-padding-y-sm) (-$0input-padding-x-sm);
+    margin-inline-end: $0input-padding-x-sm;
   }
 }
 
 .form-control-lg {
-  min-height: $input-height-lg;
-  padding: $input-padding-y-lg $input-padding-x-lg;
-  @include font-size($input-font-size-lg);
-  @include border-radius($input-border-radius-lg);
+  min-height: $0input-height-lg;
+  padding: $0input-padding-y-lg $0input-padding-x-lg;
+  @include font-size($0input-font-size-lg);
+  @include border-radius($0input-border-radius-lg);
 
   &::file-selector-button {
-    padding: $input-padding-y-lg $input-padding-x-lg;
-    margin: (-$input-padding-y-lg) (-$input-padding-x-lg);
-    margin-inline-end: $input-padding-x-lg;
+    padding: $0input-padding-y-lg $0input-padding-x-lg;
+    margin: (-$0input-padding-y-lg) (-$0input-padding-x-lg);
+    margin-inline-end: $0input-padding-x-lg;
   }
 
   &::-webkit-file-upload-button {
-    padding: $input-padding-y-lg $input-padding-x-lg;
-    margin: (-$input-padding-y-lg) (-$input-padding-x-lg);
-    margin-inline-end: $input-padding-x-lg;
+    padding: $0input-padding-y-lg $0input-padding-x-lg;
+    margin: (-$0input-padding-y-lg) (-$0input-padding-x-lg);
+    margin-inline-end: $0input-padding-x-lg;
   }
 }
 
@@ -185,15 +185,15 @@
 // stylelint-disable selector-no-qualifying-type
 textarea {
   &.form-control {
-    min-height: $input-height;
+    min-height: $0input-height;
   }
 
   &.form-control-sm {
-    min-height: $input-height-sm;
+    min-height: $0input-height-sm;
   }
 
   &.form-control-lg {
-    min-height: $input-height-lg;
+    min-height: $0input-height-lg;
   }
 }
 // stylelint-enable selector-no-qualifying-type
@@ -201,19 +201,19 @@ textarea {
 .form-control-color {
   max-width: 3rem;
   height: auto; // Override fixed browser height
-  padding: $input-padding-y;
+  padding: $0input-padding-y;
 
   &:not(:disabled):not(:read-only) {
     cursor: pointer;
   }
 
   &::-moz-color-swatch {
-    height: if(unit($input-line-height) == "", $input-line-height * 1em, $input-line-height);
-    @include border-radius($input-border-radius);
+    height: if(unit($0input-line-height) == "", $0input-line-height * 1em, $0input-line-height);
+    @include border-radius($0input-border-radius);
   }
 
   &::-webkit-color-swatch {
-    height: if(unit($input-line-height) == "", $input-line-height * 1em, $input-line-height);
-    @include border-radius($input-border-radius);
+    height: if(unit($0input-line-height) == "", $0input-line-height * 1em, $0input-line-height);
+    @include border-radius($0input-border-radius);
   }
 }
