--- a/scss/bootstrap/scss/forms/_form-text.scss
+++ b/scss/bootstrap/scss/forms/_form-text.scss
@@ -3,9 +3,9 @@
 //
 
 .form-text {
-  margin-top: $form-text-margin-top;
-  @include font-size($form-text-font-size);
-  font-style: $form-text-font-style;
-  font-weight: $form-text-font-weight;
-  color: $form-text-color;
+  margin-top: $0form-text-margin-top;
+  @include font-size($0form-text-font-size);
+  font-style: $0form-text-font-style;
+  font-weight: $0form-text-font-weight;
+  color: $0form-text-color;
 }
