--- a/scss/bootstrap/scss/forms/_input-group.scss
+++ b/scss/bootstrap/scss/forms/_input-group.scss
@@ -45,16 +45,16 @@
 .input-group-text {
   display: flex;
   align-items: center;
-  padding: $input-group-addon-padding-y $input-group-addon-padding-x;
-  @include font-size($input-font-size); // Match inputs
-  font-weight: $input-group-addon-font-weight;
-  line-height: $input-line-height;
-  color: $input-group-addon-color;
+  padding: $0input-group-addon-padding-y $0input-group-addon-padding-x;
+  @include font-size($0input-font-size); // Match inputs
+  font-weight: $0input-group-addon-font-weight;
+  line-height: $0input-line-height;
+  color: $0input-group-addon-color;
   text-align: center;
   white-space: nowrap;
-  background-color: $input-group-addon-bg;
-  border: $input-border-width solid $input-group-addon-border-color;
-  @include border-radius($input-border-radius);
+  background-color: $0input-group-addon-bg;
+  border: $0input-border-width solid $0input-group-addon-border-color;
+  @include border-radius($0input-border-radius);
 }
 
 
@@ -67,23 +67,23 @@
 .input-group-lg > .form-select,
 .input-group-lg > .input-group-text,
 .input-group-lg > .btn {
-  padding: $input-padding-y-lg $input-padding-x-lg;
-  @include font-size($input-font-size-lg);
-  @include border-radius($input-border-radius-lg);
+  padding: $0input-padding-y-lg $0input-padding-x-lg;
+  @include font-size($0input-font-size-lg);
+  @include border-radius($0input-border-radius-lg);
 }
 
 .input-group-sm > .form-control,
 .input-group-sm > .form-select,
 .input-group-sm > .input-group-text,
 .input-group-sm > .btn {
-  padding: $input-padding-y-sm $input-padding-x-sm;
-  @include font-size($input-font-size-sm);
-  @include border-radius($input-border-radius-sm);
+  padding: $0input-padding-y-sm $0input-padding-x-sm;
+  @include font-size($0input-font-size-sm);
+  @include border-radius($0input-border-radius-sm);
 }
 
 .input-group-lg > .form-select,
 .input-group-sm > .form-select {
-  padding-right: $form-select-padding-x + $form-select-indicator-padding;
+  padding-right: $0form-select-padding-x + $0form-select-indicator-padding;
 }
 
 
@@ -109,13 +109,13 @@
     }
   }
 
-  $validation-messages: "";
-  @each $state in map-keys($form-validation-states) {
-    $validation-messages: $validation-messages + ":not(." + unquote($state) + "-tooltip)" + ":not(." + unquote($state) + "-feedback)";
+  $0validation-messages: "";
+  @each $0state in map-keys($0form-validation-states) {
+    $0validation-messages: $0validation-messages + ":not(." + unquote($0state) + "-tooltip)" + ":not(." + unquote($0state) + "-feedback)";
   }
 
-  > :not(:first-child):not(.dropdown-menu)#{$validation-messages} {
-    margin-left: -$input-border-width;
+  > :not(:first-child):not(.dropdown-menu)#{$0validation-messages} {
+    margin-left: -$0input-border-width;
     @include border-start-radius(0);
   }
 }
