--- a/scss/bootstrap/scss/forms/_labels.scss
+++ b/scss/bootstrap/scss/forms/_labels.scss
@@ -3,34 +3,34 @@
 //
 
 .form-label {
-  margin-bottom: $form-label-margin-bottom;
-  @include font-size($form-label-font-size);
-  font-style: $form-label-font-style;
-  font-weight: $form-label-font-weight;
-  color: $form-label-color;
+  margin-bottom: $0form-label-margin-bottom;
+  @include font-size($0form-label-font-size);
+  font-style: $0form-label-font-style;
+  font-weight: $0form-label-font-weight;
+  color: $0form-label-color;
 }
 
 // For use with horizontal and inline forms, when you need the label (or legend)
 // text to align with the form controls.
 .col-form-label {
-  padding-top: add($input-padding-y, $input-border-width);
-  padding-bottom: add($input-padding-y, $input-border-width);
+  padding-top: add($0input-padding-y, $0input-border-width);
+  padding-bottom: add($0input-padding-y, $0input-border-width);
   margin-bottom: 0; // Override the `<legend>` default
   @include font-size(inherit); // Override the `<legend>` default
-  font-style: $form-label-font-style;
-  font-weight: $form-label-font-weight;
-  line-height: $input-line-height;
-  color: $form-label-color;
+  font-style: $0form-label-font-style;
+  font-weight: $0form-label-font-weight;
+  line-height: $0input-line-height;
+  color: $0form-label-color;
 }
 
 .col-form-label-lg {
-  padding-top: add($input-padding-y-lg, $input-border-width);
-  padding-bottom: add($input-padding-y-lg, $input-border-width);
-  @include font-size($input-font-size-lg);
+  padding-top: add($0input-padding-y-lg, $0input-border-width);
+  padding-bottom: add($0input-padding-y-lg, $0input-border-width);
+  @include font-size($0input-font-size-lg);
 }
 
 .col-form-label-sm {
-  padding-top: add($input-padding-y-sm, $input-border-width);
-  padding-bottom: add($input-padding-y-sm, $input-border-width);
-  @include font-size($input-font-size-sm);
+  padding-top: add($0input-padding-y-sm, $0input-border-width);
+  padding-bottom: add($0input-padding-y-sm, $0input-border-width);
+  @include font-size($0input-font-size-sm);
 }
