--- a/scss/bootstrap/scss/helpers/_stretched-link.scss
+++ b/scss/bootstrap/scss/helpers/_stretched-link.scss
@@ -3,13 +3,13 @@
 //
 
 .stretched-link {
-  &::#{$stretched-link-pseudo-element} {
+  &::#{$0stretched-link-pseudo-element} {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: $stretched-link-z-index;
+    z-index: $0stretched-link-z-index;
     content: "";
   }
 }
