--- a/scss/bootstrap/scss/mixins/_alert.scss
+++ b/scss/bootstrap/scss/mixins/_alert.scss
@@ -1,11 +1,11 @@
 // scss-docs-start alert-variant-mixin
-@mixin alert-variant($background, $border, $color) {
-  color: $color;
-  @include gradient-bg($background);
-  border-color: $border;
+@mixin alert-variant($0background, $0border, $0color) {
+  color: $0color;
+  @include gradient-bg($0background);
+  border-color: $0border;
 
   .alert-link {
-    color: shade-color($color, 20%);
+    color: shade-color($0color, 20%);
   }
 }
 // scss-docs-end alert-variant-mixin
