--- a/scss/bootstrap/scss/mixins/_border-radius.scss
+++ b/scss/bootstrap/scss/mixins/_border-radius.scss
@@ -2,77 +2,77 @@
 // Single side border-radius
 
 // Helper function to replace negative values with 0
-@function valid-radius($radius) {
-  $return: ();
-  @each $value in $radius {
-    @if type-of($value) == number {
-      $return: append($return, max($value, 0));
+@function valid-radius($0radius) {
+  $0return: ();
+  @each $0value in $0radius {
+    @if type-of($0value) == number {
+      $0return: append($0return, max($0value, 0));
     } @else {
-      $return: append($return, $value);
+      $0return: append($0return, $0value);
     }
   }
-  @return $return;
+  @return $0return;
 }
 
 // scss-docs-start border-radius-mixins
-@mixin border-radius($radius: $border-radius, $fallback-border-radius: false) {
-  @if $enable-rounded {
-    border-radius: valid-radius($radius);
+@mixin border-radius($0radius: $0border-radius, $0fallback-border-radius: false) {
+  @if $0enable-rounded {
+    border-radius: valid-radius($0radius);
   }
-  @else if $fallback-border-radius != false {
-    border-radius: $fallback-border-radius;
-  }
-}
-
-@mixin border-top-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-top-left-radius: valid-radius($radius);
-    border-top-right-radius: valid-radius($radius);
+  @else if $0fallback-border-radius != false {
+    border-radius: $0fallback-border-radius;
   }
 }
 
-@mixin border-end-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-top-right-radius: valid-radius($radius);
-    border-bottom-right-radius: valid-radius($radius);
+@mixin border-top-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-top-left-radius: valid-radius($0radius);
+    border-top-right-radius: valid-radius($0radius);
   }
 }
 
-@mixin border-bottom-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-bottom-right-radius: valid-radius($radius);
-    border-bottom-left-radius: valid-radius($radius);
+@mixin border-end-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-top-right-radius: valid-radius($0radius);
+    border-bottom-right-radius: valid-radius($0radius);
   }
 }
 
-@mixin border-start-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-top-left-radius: valid-radius($radius);
-    border-bottom-left-radius: valid-radius($radius);
+@mixin border-bottom-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-bottom-right-radius: valid-radius($0radius);
+    border-bottom-left-radius: valid-radius($0radius);
   }
 }
 
-@mixin border-top-start-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-top-left-radius: valid-radius($radius);
+@mixin border-start-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-top-left-radius: valid-radius($0radius);
+    border-bottom-left-radius: valid-radius($0radius);
   }
 }
 
-@mixin border-top-end-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-top-right-radius: valid-radius($radius);
+@mixin border-top-start-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-top-left-radius: valid-radius($0radius);
   }
 }
 
-@mixin border-bottom-end-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-bottom-right-radius: valid-radius($radius);
+@mixin border-top-end-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-top-right-radius: valid-radius($0radius);
   }
 }
 
-@mixin border-bottom-start-radius($radius: $border-radius) {
-  @if $enable-rounded {
-    border-bottom-left-radius: valid-radius($radius);
+@mixin border-bottom-end-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-bottom-right-radius: valid-radius($0radius);
+  }
+}
+
+@mixin border-bottom-start-radius($0radius: $0border-radius) {
+  @if $0enable-rounded {
+    border-bottom-left-radius: valid-radius($0radius);
   }
 }
 // scss-docs-end border-radius-mixins
