--- a/scss/bootstrap/scss/mixins/_caret.scss
+++ b/scss/bootstrap/scss/mixins/_caret.scss
@@ -1,56 +1,56 @@
 // scss-docs-start caret-mixins
 @mixin caret-down {
-  border-top: $caret-width solid;
-  border-right: $caret-width solid transparent;
+  border-top: $0caret-width solid;
+  border-right: $0caret-width solid transparent;
   border-bottom: 0;
-  border-left: $caret-width solid transparent;
+  border-left: $0caret-width solid transparent;
 }
 
 @mixin caret-up {
   border-top: 0;
-  border-right: $caret-width solid transparent;
-  border-bottom: $caret-width solid;
-  border-left: $caret-width solid transparent;
+  border-right: $0caret-width solid transparent;
+  border-bottom: $0caret-width solid;
+  border-left: $0caret-width solid transparent;
 }
 
 @mixin caret-end {
-  border-top: $caret-width solid transparent;
+  border-top: $0caret-width solid transparent;
   border-right: 0;
-  border-bottom: $caret-width solid transparent;
-  border-left: $caret-width solid;
+  border-bottom: $0caret-width solid transparent;
+  border-left: $0caret-width solid;
 }
 
 @mixin caret-start {
-  border-top: $caret-width solid transparent;
-  border-right: $caret-width solid;
-  border-bottom: $caret-width solid transparent;
+  border-top: $0caret-width solid transparent;
+  border-right: $0caret-width solid;
+  border-bottom: $0caret-width solid transparent;
 }
 
-@mixin caret($direction: down) {
-  @if $enable-caret {
+@mixin caret($0direction: down) {
+  @if $0enable-caret {
     &::after {
       display: inline-block;
-      margin-left: $caret-spacing;
-      vertical-align: $caret-vertical-align;
+      margin-left: $0caret-spacing;
+      vertical-align: $0caret-vertical-align;
       content: "";
-      @if $direction == down {
+      @if $0direction == down {
         @include caret-down();
-      } @else if $direction == up {
+      } @else if $0direction == up {
         @include caret-up();
-      } @else if $direction == end {
+      } @else if $0direction == end {
         @include caret-end();
       }
     }
 
-    @if $direction == start {
+    @if $0direction == start {
       &::after {
         display: none;
       }
 
       &::before {
         display: inline-block;
-        margin-right: $caret-spacing;
-        vertical-align: $caret-vertical-align;
+        margin-right: $0caret-spacing;
+        vertical-align: $0caret-vertical-align;
         content: "";
         @include caret-start();
       }
