--- a/scss/bootstrap/scss/mixins/_container.scss
+++ b/scss/bootstrap/scss/mixins/_container.scss
@@ -1,9 +1,9 @@
 // Container mixins
 
-@mixin make-container($gutter: $container-padding-x) {
+@mixin make-container($0gutter: $0container-padding-x) {
   width: 100%;
-  padding-right: var(--#{$variable-prefix}gutter-x, #{$gutter});
-  padding-left: var(--#{$variable-prefix}gutter-x, #{$gutter});
+  padding-right: var(--#{$0variable-prefix}gutter-x, #{$0gutter});
+  padding-left: var(--#{$0variable-prefix}gutter-x, #{$0gutter});
   margin-right: auto;
   margin-left: auto;
 }
