--- a/scss/bootstrap/scss/mixins/_deprecate.scss
+++ b/scss/bootstrap/scss/mixins/_deprecate.scss
@@ -1,10 +1,10 @@
 // Deprecate mixin
 //
 // This mixin can be used to deprecate mixins or functions.
-// `$enable-deprecation-messages` is a global variable, `$ignore-warning` is a variable that can be passed to
+// `$0enable-deprecation-messages` is a global variable, `$0ignore-warning` is a variable that can be passed to
 // some deprecated mixins to suppress the warning (for example if the mixin is still be used in the current version of Bootstrap)
-@mixin deprecate($name, $deprecate-version, $remove-version, $ignore-warning: false) {
-  @if ($enable-deprecation-messages != false and $ignore-warning != true) {
-    @warn "#{$name} has been deprecated as of #{$deprecate-version}. It will be removed entirely in #{$remove-version}.";
+@mixin deprecate($0name, $0deprecate-version, $0remove-version, $0ignore-warning: false) {
+  @if ($0enable-deprecation-messages != false and $0ignore-warning != true) {
+    @warn "#{$0name} has been deprecated as of #{$0deprecate-version}. It will be removed entirely in #{$0remove-version}.";
   }
 }
