--- a/scss/bootstrap/scss/mixins/_pagination.scss
+++ b/scss/bootstrap/scss/mixins/_pagination.scss
@@ -1,29 +1,29 @@
 // Pagination
 
 // scss-docs-start pagination-mixin
-@mixin pagination-size($padding-y, $padding-x, $font-size, $border-radius) {
+@mixin pagination-size($0padding-y, $0padding-x, $0font-size, $0border-radius) {
   .page-link {
-    padding: $padding-y $padding-x;
-    @include font-size($font-size);
+    padding: $0padding-y $0padding-x;
+    @include font-size($0font-size);
   }
 
   .page-item {
-    @if $pagination-margin-start == (-$pagination-border-width) {
+    @if $0pagination-margin-start == (-$0pagination-border-width) {
       &:first-child {
         .page-link {
-          @include border-start-radius($border-radius);
+          @include border-start-radius($0border-radius);
         }
       }
 
       &:last-child {
         .page-link {
-          @include border-end-radius($border-radius);
+          @include border-end-radius($0border-radius);
         }
       }
     } @else {
       //Add border-radius to all pageLinks in case they have left margin
       .page-link {
-        @include border-radius($border-radius);
+        @include border-radius($0border-radius);
       }
     }
   }
