--- a/scss/bootstrap/scss/mixins/_reset-text.scss
+++ b/scss/bootstrap/scss/mixins/_reset-text.scss
@@ -1,9 +1,9 @@
 @mixin reset-text {
-  font-family: $font-family-base;
+  font-family: $0font-family-base;
   // We deliberately do NOT reset font-size or overflow-wrap / word-wrap.
   font-style: normal;
-  font-weight: $font-weight-normal;
-  line-height: $line-height-base;
+  font-weight: $0font-weight-normal;
+  line-height: $0line-height-base;
   text-align: left; // Fallback for where `start` is not supported
   text-align: start;
   text-decoration: none;
