--- a/scss/bootstrap/scss/mixins/_table-variants.scss
+++ b/scss/bootstrap/scss/mixins/_table-variants.scss
@@ -1,21 +1,21 @@
 // scss-docs-start table-variant
-@mixin table-variant($state, $background) {
-  .table-#{$state} {
-    $color: color-contrast(opaque($body-bg, $background));
-    $hover-bg: mix($color, $background, percentage($table-hover-bg-factor));
-    $striped-bg: mix($color, $background, percentage($table-striped-bg-factor));
-    $active-bg: mix($color, $background, percentage($table-active-bg-factor));
+@mixin table-variant($0state, $0background) {
+  .table-#{$0state} {
+    $0color: color-contrast(opaque($0body-bg, $0background));
+    $0hover-bg: mix($0color, $0background, percentage($0table-hover-bg-factor));
+    $0striped-bg: mix($0color, $0background, percentage($0table-striped-bg-factor));
+    $0active-bg: mix($0color, $0background, percentage($0table-active-bg-factor));
 
-    --#{$variable-prefix}table-bg: #{$background};
-    --#{$variable-prefix}table-striped-bg: #{$striped-bg};
-    --#{$variable-prefix}table-striped-color: #{color-contrast($striped-bg)};
-    --#{$variable-prefix}table-active-bg: #{$active-bg};
-    --#{$variable-prefix}table-active-color: #{color-contrast($active-bg)};
-    --#{$variable-prefix}table-hover-bg: #{$hover-bg};
-    --#{$variable-prefix}table-hover-color: #{color-contrast($hover-bg)};
+    --#{$0variable-prefix}table-bg: #{$0background};
+    --#{$0variable-prefix}table-striped-bg: #{$0striped-bg};
+    --#{$0variable-prefix}table-striped-color: #{color-contrast($0striped-bg)};
+    --#{$0variable-prefix}table-active-bg: #{$0active-bg};
+    --#{$0variable-prefix}table-active-color: #{color-contrast($0active-bg)};
+    --#{$0variable-prefix}table-hover-bg: #{$0hover-bg};
+    --#{$0variable-prefix}table-hover-color: #{color-contrast($0hover-bg)};
 
-    color: $color;
-    border-color: mix($color, $background, percentage($table-border-factor));
+    color: $0color;
+    border-color: mix($0color, $0background, percentage($0table-border-factor));
   }
 }
 // scss-docs-end table-variant
