--- a/scss/bootstrap/scss/mixins/_transition.scss
+++ b/scss/bootstrap/scss/mixins/_transition.scss
@@ -1,23 +1,23 @@
 // stylelint-disable property-disallowed-list
-@mixin transition($transition...) {
-  @if length($transition) == 0 {
-    $transition: $transition-base;
+@mixin transition($0transition...) {
+  @if length($0transition) == 0 {
+    $0transition: $0transition-base;
   }
 
-  @if length($transition) > 1 {
-    @each $value in $transition {
-      @if $value == null or $value == none {
+  @if length($0transition) > 1 {
+    @each $0value in $0transition {
+      @if $0value == null or $0value == none {
         @warn "The keyword 'none' or 'null' must be used as a single argument.";
       }
     }
   }
 
-  @if $enable-transitions {
-    @if nth($transition, 1) != null {
-      transition: $transition;
+  @if $0enable-transitions {
+    @if nth($0transition, 1) != null {
+      transition: $0transition;
     }
 
-    @if $enable-reduced-motion and nth($transition, 1) != null and nth($transition, 1) != none {
+    @if $0enable-reduced-motion and nth($0transition, 1) != null and nth($0transition, 1) != none {
       @media (prefers-reduced-motion: reduce) {
         transition: none;
       }
